# blake3-node-cmake

./: .gitignore  CMakeLists.txt  README.md  assets.json  index.js  package-lock.json  package.json
blake3-neon/: package-lock.json
client/: Cargo.toml  wasm_wrap.js
client/js/: hash_wrap.js
js/: hash_wrap.js
src/: Cargo.toml  lib.rs  node_blake3_mod.h  node_blake4_mod.cc
src-client/: Cargo.toml  build.sh  test.html
src-client/src/: lib.rs
src-neon/: Cargo.toml  README.md  package.json
src-neon/src/: lib.rs
src-node/: node_blake3_mod.cc  node_blake3_mod.h
test/: index.js  test.html  wasm_serv.js
test/cpu-count/: Cargo.toml  README.md  package.json
test/cpu-count/src/: lib.rs
tools/: pre_inst_build.sh
ts/: hash_wrap.d.ts  hash_wrap.js  hash_wrap.ts  index.d.ts  index.js  index.ts  wasm_wrap.d.ts  wasm_wrap.js  wasm_wrap.ts
