[package]
name = "blake3-wasm-nobindgen"
version = "0.1.0"
authors = ["Richard Leddy <rleddy@copious.world>"]
description = "basic WASM interface relying only on extern C calls"
license = "GPL-2.0-only"
repository = "https://github.com/copious-world/copious-counters"
edition = "2023"


[lib]
crate-type=["rlib", "cdylib"]

[dependencies]
blake3 = "1.2.0"


